--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,6 @@ fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots/**/*.png
 fastlane/test_output
+
+MemberCardApp/MemberCardApp/Support/Key/
+.DS_Store
